--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -18,12 +18,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/items_layout"
     android:layout_width="match_parent"
-    android:layout_height="88dp">
+    android:layout_height="wrap_content"
+    android:minHeight="@dimen/list_item_height">
 
     <ImageView
         android:id="@+id/miwok_image"
-        android:layout_width="88dp"
-        android:layout_height="88dp"
+        android:layout_width="@dimen/list_item_height"
+        android:layout_height="@dimen/list_item_height"
         android:background="@color/tan_background"/>
 
     <TextView
@@ -34,7 +35,7 @@
         android:layout_marginLeft="16dp"
         android:layout_marginTop="16dp"
         android:textStyle="bold"
-        android:textSize="18sp"
+        android:textAppearance="?android:textAppearanceMedium"
         android:textColor="@android:color/white"
         tools:text="lutti" />
 
