--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,7 +20,7 @@
     android:background="@color/tan_background"
     android:orientation="vertical"
     android:gravity="center"
-    tools:context="com.example.android.miwok.MainActivity">
+    tools:context=".activity.MainActivity">
 
     <TextView
         android:layout_width="match_parent"
