--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,8 +25,7 @@
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/category_numbers"
-        android:layout_weight="1">
+        android:background="@color/category_numbers">
         <TextView
             android:id="@+id/numbers"
             style="@style/CategoryStyle"
@@ -38,8 +37,7 @@
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/category_family"
-        android:layout_weight="1">
+        android:background="@color/category_family">
         <TextView
             android:id="@+id/family"
             style="@style/CategoryStyle"
@@ -51,8 +49,7 @@
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/category_colors"
-        android:layout_weight="1">
+        android:background="@color/category_colors">
         <TextView
             android:id="@+id/colors"
             style="@style/CategoryStyle"
@@ -64,8 +61,7 @@
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/category_phrases"
-        android:layout_weight="1">
+        android:background="@color/category_phrases">
         <TextView
             android:id="@+id/phrases"
             style="@style/CategoryStyle"
