--- a/app/src/main/res/layout/activity_main_original.xml
+++ b/app/src/main/res/layout/activity_main_original.xml
@@ -19,53 +19,46 @@
     android:layout_height="match_parent"
     android:background="@color/tan_background"
     android:orientation="vertical"
+    android:gravity="center"
     tools:context=".activity.MainActivity">
 
-    <!-- Numbers category -->
-    <FrameLayout
+    <!--changed the background color to allow for press behavior-->
+    <TextView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/category_numbers">
-        <TextView
-            android:id="@+id/numbers"
-            style="@style/CategoryStyle"
-            android:background="?android:attr/selectableItemBackground"
-            android:text="@string/category_numbers" />
-    </FrameLayout>
+        android:layout_height="match_parent"
+        android:id="@+id/numbers"
+        style="@style/CategoryStyle"
+        android:background="?android:attr/selectableItemBackground"
+        android:text="@string/category_numbers"
+        android:layout_weight="1"
+        android:textColor="#000000"/>
 
-    <!-- Family category -->
-    <FrameLayout
+    <TextView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/category_family">
-        <TextView
-            android:id="@+id/family"
-            style="@style/CategoryStyle"
-            android:background="?android:attr/selectableItemBackground"
-            android:text="@string/category_family" />
-    </FrameLayout>
+        android:layout_height="match_parent"
+        android:id="@+id/family"
+        style="@style/CategoryStyle"
+        android:background="@color/category_family"
+        android:text="@string/category_family"
+        android:layout_weight="1"
+        />
 
-    <!-- Colors category -->
-    <FrameLayout
+    <TextView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/category_colors">
-        <TextView
-            android:id="@+id/colors"
-            style="@style/CategoryStyle"
-            android:background="?android:attr/selectableItemBackground"
-            android:text="@string/category_colors" />
-    </FrameLayout>
+        android:layout_height="match_parent"
+        android:id="@+id/colors"
+        style="@style/CategoryStyle"
+        android:background="@color/category_colors"
+        android:text="@string/category_colors"
+        android:layout_weight="1"/>
 
-    <!-- Phrases category -->
-    <FrameLayout
+    <TextView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/category_phrases">
-        <TextView
-            android:id="@+id/phrases"
-            style="@style/CategoryStyle"
-            android:background="?android:attr/selectableItemBackground"
-            android:text="@string/category_phrases" />
-    </FrameLayout>
+        android:layout_height="match_parent"
+        android:id="@+id/phrases"
+        style="@style/CategoryStyle"
+        android:background="@color/category_phrases"
+        android:text="@string/category_phrases"
+        android:layout_weight="1"/>
+
 </LinearLayout>
