--- a/app/src/main/res/layout/word_list.xml
+++ b/app/src/main/res/layout/word_list.xml
@@ -24,4 +24,5 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="0dp"
     android:divider="@android:color/white"
-    android:dividerHeight="1px"/>
+    android:dividerHeight="1px"
+    android:drawSelectorOnTop="true"/>
