--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,7 +25,8 @@
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/category_numbers">
+        android:background="@color/category_numbers"
+        android:layout_weight="1">
         <TextView
             android:id="@+id/numbers"
             style="@style/CategoryStyle"
@@ -37,7 +38,8 @@
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/category_family">
+        android:background="@color/category_family"
+        android:layout_weight="1">
         <TextView
             android:id="@+id/family"
             style="@style/CategoryStyle"
@@ -49,7 +51,8 @@
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/category_colors">
+        android:background="@color/category_colors"
+        android:layout_weight="1">
         <TextView
             android:id="@+id/colors"
             style="@style/CategoryStyle"
@@ -61,7 +64,8 @@
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/category_phrases">
+        android:background="@color/category_phrases"
+        android:layout_weight="1">
         <TextView
             android:id="@+id/phrases"
             style="@style/CategoryStyle"
